# hearth

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: app_state.h  config.cpp  config.h  grok_oauth.cpp  grok_oauth.h  main.cpp  markdown.cpp  markdown.h  ollama.cpp  ollama.h  providers.cpp  providers.h  storage.cpp  storage.h  theme.cpp  theme.h  ui.cpp  ui.h
